fixed overflow issue and added width to the logo

--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,13 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 body{
     font-family: 'Gruppo', cursive;
     font-weight: 600;
     width: 100%;
-    overflow-x: hidden;
+    
 }
 html{
     scroll-behavior: smooth;
@@ -20,6 +21,7 @@ header{
 }
 .nav-bar-container{
     background: #ffffff;
+    text-align: center;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -27,6 +29,7 @@ header{
 }
 .logo{
     font-size: 24px;
+    min-width: 300px;
     font-weight: 600;
     letter-spacing: 2px;
     cursor: pointer;
@@ -52,7 +55,8 @@ nav{
     align-items: center;
     justify-content: space-around;
     list-style: none;
-    font-size: 25px;
+    font-size: 18px;
+    
 }
 
 nav a {
@@ -61,12 +65,15 @@ nav a {
     text-decoration: none;
     color: black;
     cursor: pointer;
+    
 }
-
+.nav-ul li {
+    overflow-y: hidden;
+}
 .contact-btn {
     color: #6E07F3;
     font-weight: 900;
-    font-size: 25px;
+    font-size: 18px;
     border: none;
     border-radius: 50px;
     border: 2px solid #6E07F3;
@@ -76,12 +83,15 @@ nav a {
 .contact-btn:hover{
     background: #6E07F3;
     color: #ffffff;
+    
 }
 .mobile-contact {
     display: none;
 }
 
 @media screen and (max-width: 768px){
+    
+    
     nav{
         position: fixed;
         bottom: 0;
@@ -111,6 +121,9 @@ nav a {
 
 }
 /* top section */
+main{
+    max-width: 100vw;
+}
 .top-section{
     display: flex;
     flex-direction: column;
